# dgemm_omp

./: CMakeLists.txt  README.md  callgrind.out.28161  main.c
apps/: CMakeLists.txt  benchamrk_liear_and_omp.c  run_sbatches.sh  slurm_run.sh
benschmark_results/: speed_analisys.ipynb
source/: my_dgemm.h  utils.h
test/: CMakeLists.txt  test.c
